<resources>
    <string name="app_name">Geo-Quiz</string>

    <!-- Buttons -->
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">NEXT &gt;</string>
    <string name="previous_button">&lt; PREV</string>

    <!-- questions -->
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <!-- Toasts -->
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
</resources>